dataset1235/2025-2/610742602/users/776967928/executions/2563853024_997093868.log
== SUBMISSION (2025-09-02 20:37:25)
-- CODE: 
a = float(input("valor a: "))
b = float(input("valor b: ))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = float(input("valor b: ))
                    ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = float(input("valor b: ))
                    ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = float(input("valor b: ))
                    ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = float(input("valor b: ))
                    ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = float(input("valor b: ))
                    ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = float(input("valor b: ))
                    ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:39:48)
-- CODE: 
a = float(input())
b = float(input())
soma = a+b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:37:40)
-- CODE: 
a = float(input("valor a: "))
b = float(input("valor b: "))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
valor a: valor b: 20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
valor a: valor b: 5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
valor a: valor b: 68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
valor a: valor b: 185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
valor a: valor b: 44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
valor a: valor b: 108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:34:51)
-- CODE: 
a = float(input())
b = float(input())
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:51:47)
-- CODE: 
a = float(input())
b = float(input())
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:39:41)
-- CODE: 
a = float(input())
b = float(input())
soma = a+b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:38:49)
-- CODE: 
a = float(input("valor a: "))
b = float(input("valor b: "))
soma = (a + b)
print(input(soma))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(soma))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(soma))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(soma))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(soma))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(soma))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(soma))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:35:30)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:39:21)
-- CODE: 
a = float(input()
b = float(input()
soma = a+b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:39:25)
-- CODE: 
a = float(input()
b = float(input()
soma = a+b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
